--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env:mhetesp32devkit]
 platform = espressif32
 board = mhetesp32devkit
+board_build.partitions = huge.csv
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
